--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.duanyy.mycamera.MainActivity">
+
+    <Button
+        android:id="@+id/mBtnPicture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Picture"/>
 
     <Button
         android:id="@+id/mBtnCamera"
@@ -15,4 +22,4 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Camera"/>
-</RelativeLayout>
+</LinearLayout>
