--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     tools:context="com.duanyy.mycamera.PictureActivity">
 
+    <com.duanyy.mycamera.picture.PictureGLSurfaceView
+        android:id="@+id/mPictureGLSurfaceview"
+        android:layout_gravity="center"
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
 
+    <Button
+        android:onClick="btnDraw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="draw picture"/>
 
 </FrameLayout>
