1.离屏渲染：使用FrameBuffer，绘制一张图片。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,12 @@
         android:text="Picture"/>
 
     <Button
+        android:id="@+id/mBtnBuffer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FrameBuffer"/>
+
+    <Button
         android:id="@+id/mBtnCube"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
