使用 AudioRecord 完成音频数据的采集，并实现写音频 wav 文件.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,4 +49,10 @@
         android:layout_height="wrap_content"
         android:text="Cube ProjectionMatrix"/>
 
+    <Button
+        android:id="@+id/mBtnAudioRecord"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Audio Record"/>
+
 </LinearLayout>
