--- a/app/src/main/res/layout/activity_audio_record.xml
+++ b/app/src/main/res/layout/activity_audio_record.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.duanyy.mycamera.audio.AudioRecordActivity">
+    tools:context=".media.audio.AudioRecordActivity">
 
     <LinearLayout
         android:layout_gravity="center"
@@ -16,7 +16,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
